Created login/logout register functionallity with error handling

--- a/src/components/login/Login.component.css
+++ b/src/components/login/Login.component.css
@@ -261,4 +261,9 @@ html {
   *:focus {
       outline: none;
   }
-  
+  .loginErrorWrap {
+    padding-bottom:  20px;
+  }
+  .loginError {
+    color: red;
+  }
