--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
-@import "bootstrap/dist/css/bootstrap.min.css"
+@import "bootstrap/dist/css/bootstrap.min.css";
+
+
+#root {
+    width: 100%;
+    padding-top: 56px;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.card-link {
+    color: blue;
+}
