--- a/src/components/login/Login.component.css
+++ b/src/components/login/Login.component.css
@@ -9,8 +9,6 @@ html {
     font-family: "Poppins", sans-serif;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
   }
   
   a {
@@ -33,6 +31,14 @@ html {
   
   
   /* STRUCTURE */
+
+  .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .wrapper {
     display: flex;
